<resources>
    <string name="app_name">ProjectToolbar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_spend_money">Ваши деньги</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="USD">USD</string>
    <string name="EUR">EUR</string>
    <string name="RUB">RUB</string>
    <string name="Spend">Потрачено</string>
    <string name="Income">Заработана</string>
    <string name="error_text">Задайте курс доллара и евро по отношению рублю для дальнейшей работы.</string>
    <string name="rate_USD">Курс USD</string>
    <string name="rate_EUR">Курс EUR</string>
    <string name="rate_CheckBox_text">Сделать курс по умолчанию</string>
    <string name="caution_alert_dialog">Заполните свободные поля или выберите по умолчанию</string>
</resources>
