<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_lightest">

    <RadioGroup
        android:id="@+id/radioGroupValute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_USDValute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/USD"
            android:buttonTint="@color/accent"
            android:textColor="@color/colorBlackDark" />

        <RadioButton
            android:id="@+id/radio_EURValute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/EUR"
            android:buttonTint="@color/accent"
            android:textColor="@color/colorBlackDark" />

        <RadioButton
            android:id="@+id/radio_RUBValute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="true"
            android:text="@string/RUB"
            android:buttonTint="@color/accent"
            android:textColor="@color/colorBlackDark" />
    </RadioGroup>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_spend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Расходы   "
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/statictics_title_background"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/title_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@+id/title_spend"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/RUB"
                    android:textStyle="bold"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorBlackDark"
                android:text="Сегодня" />

            <View
                android:id="@+id/viewOne"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/toDay"
                android:layout_gravity="center"
                android:background="@color/grey"
                android:layout_alignLeft="@+id/toDay"
                android:layout_alignRight="@+id/moneyDayL"
                android:layout_marginTop="1dp" />

            <TextView
                android:id="@+id/toWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:layout_below="@+id/viewOne"
                android:layout_alignLeft="@+id/toDay"
                android:textColor="@color/colorBlackDark"
                android:text="Неделя" />

            <View
                android:id="@+id/viewTwo"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/toWeek"
                android:layout_gravity="center"
                android:background="@color/grey"
                android:layout_alignLeft="@+id/toDay"
                android:layout_alignRight="@+id/moneyDayL"
                android:layout_marginTop="1dp" />

            <TextView
                android:id="@+id/toMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:layout_below="@+id/viewTwo"
                android:layout_alignLeft="@+id/toDay"
                android:textColor="@color/colorBlackDark"
                android:text="Месяц" />

            <TextView
                android:id="@+id/moneyDayL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@+id/toDay"
                android:layout_marginRight="10dp"
                android:text="0.00"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/moneyWeekL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@+id/moneyDayL"
                android:layout_marginRight="10dp"
                android:layout_alignBottom="@+id/toWeek"
                android:text="0.00"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/moneyMonthL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@+id/moneyDayL"
                android:layout_marginRight="10dp"
                android:layout_alignBottom="@+id/toMonth"
                android:text="0.00"
                android:textSize="20sp" />

        </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Доходы   "
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/statictics_title_background"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/title_income_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@+id/title_income"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/RUB"
                    android:textStyle="bold"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/incomeMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorBlackDark"
                    android:text="Месяц" />

                <TextView
                    android:id="@+id/moneyIncomeMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@+id/incomeMonth"
                    android:layout_marginRight="10dp"
                    android:text="0.00"
                    android:textSize="20sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_allMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Баланс   "
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/statictics_title_background"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/title_allmoney_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@+id/title_allMoney"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/RUB"
                    android:textStyle="bold"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/allMoney_allTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorBlackDark"
                    android:text="Всё время" />

                <TextView
                    android:id="@+id/allmoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@+id/allMoney_allTime"
                    android:layout_marginRight="10dp"
                    android:text="0.00"
                    android:textSize="20sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>